--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,9 @@
-build-vdk*
-build-ut*
-lib/config.pri
-lib/src/MimeVBEngine.cpp
-lib/src/MimeVBEngine.h
-lib/src/VDKDotNetEngine.cpp
-lib/src/VDKDotNetEngine.h
-lib/src/VDKEngine.cpp
-lib/src/VDKEngine.h
-lib/src/VDKJEngine.cpp
-lib/src/VDKJEngine.h
-lib/src/VDKJavaEngine.java
-lib/src/VDKQtEngine.cpp
-lib/src/VDKQtEngine.h
-lib/src/VdkControl.cs
-lib/src/util/
-lib/src/ext
-lib/src/wgen2
-lib/src/vdkdotnet.def
-lib/last_build/
-lib/deps/lib
-lib/deps/bundle-bin
-lib/deps/uniqlogger-bin
-lib/deps/libg729-bin
-lib/deps/libnrpycpp-bin
-lib/debug
-lib/release
-lib/Documentation/Reference
+build-*
+class/ext
+class/deps/
 *.pro.user
-lib/utils/scripts/.idea/
 tester/depspath.pri
 tester/ui/
 NrBinaries
 *.DS_Store
 
-lib/vdk.rc
-lib/src/SourceRevision.h
